# nemo_solver

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  frmInputNumber.cpp  frmInputNumber.h  main.cpp  nemo_5_5_01.in  nemo_util.cpp  nemo_util.h
data/: nemo-1-1022.in  nemo-1-973.in  nemo.in  nemo2.in  nemo_1_566.in  nemo_1_566_2.in  nemo_1_589.in.mod  nemo_1_591.in  nemo_1_591.in.mod  nemo_1_595.in  simple.in
python/: _0_game_num.py  _1_image_process.py  _2_mv_png_dir.py  _3_num_dir_to_in_file.py  frmNemo.py  image.py  image2.py  nemo_solver.py  num_dir_to_in_file.py  solver_claude.py
